[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/sprites/ui_elements/background_box.png" type="Texture" id=1]
[ext_resource path="res://scripts/screens/prediction_results_overlay.gd" type="Script" id=2]
[ext_resource path="res://scripts/ui_elements/results_rect.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/nokiafc22.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/ui/CandidateProjectionBarContainer.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sprites/characters/team_a_gatherer.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/characters/team_a_campaigner.png" type="Texture" id=7]
[ext_resource path="res://scenes/ui/ElectionLoserContainer.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/ui/MenuButton.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=5]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 2
outline_color = Color( 0.803922, 0.721569, 0.494118, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_fonts/font:outline_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.803922, 0.721569, 0.494118, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "alpha_blend"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_fonts/font:outline_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.803922, 0.721569, 0.494118, 1 ), Color( 0.803922, 0.721569, 0.494118, 0 ), Color( 0.803922, 0.721569, 0.494118, 1 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EffectScreenLabel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EffectScreenLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "enlarge"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("EffectScreenLabel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1.2, 1.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EffectScreenLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}

[node name="PredictionResultsOverlay" type="CanvasLayer"]
pause_mode = 2
layer = 100
script = ExtResource( 2 )

[node name="BackgroundFade" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.498039 )

[node name="ScreenLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
text = "Extra! Extra! Read all about it!
New predictions for the elections are out!"
align = 1
valign = 1

[node name="EffectScreenLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 960, 540 )
custom_fonts/font = SubResource( 5 )
text = "Extra! Extra! Read all about it!
New predictions for the elections are out!"
align = 1
valign = 1

[node name="ResultsRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -638.0
margin_top = -466.5
margin_right = 638.0
margin_bottom = 466.5
texture = ExtResource( 1 )
patch_margin_left = 180
patch_margin_top = 140
patch_margin_right = 200
patch_margin_bottom = 140
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="ResultsRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 180.0
margin_top = 140.0
margin_right = -200.0
margin_bottom = -140.0

[node name="VBoxContainer" type="VBoxContainer" parent="ResultsRect/MarginContainer"]
margin_right = 896.0
margin_bottom = 653.0
custom_constants/separation = 0
alignment = 1

[node name="ResultsTextLabel" type="Label" parent="ResultsRect/MarginContainer/VBoxContainer"]
margin_right = 896.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
text = "Overall Predictions"
align = 1
valign = 1

[node name="ProjectionsContainer" type="VBoxContainer" parent="ResultsRect/MarginContainer/VBoxContainer"]
visible = false
margin_top = 80.0
margin_right = 896.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 1

[node name="CandidateProjectionBarContainer" parent="ResultsRect/MarginContainer/VBoxContainer/ProjectionsContainer" instance=ExtResource( 5 )]
margin_right = 896.0

[node name="CandidateProjectionBarContainer2" parent="ResultsRect/MarginContainer/VBoxContainer/ProjectionsContainer" instance=ExtResource( 5 )]
margin_top = 100.0
margin_right = 896.0
margin_bottom = 200.0

[node name="CandidateProjectionBarContainer3" parent="ResultsRect/MarginContainer/VBoxContainer/ProjectionsContainer" instance=ExtResource( 5 )]
margin_top = 200.0
margin_right = 896.0
margin_bottom = 300.0

[node name="CandidateProjectionBarContainer4" parent="ResultsRect/MarginContainer/VBoxContainer/ProjectionsContainer" instance=ExtResource( 5 )]
margin_top = 300.0
margin_right = 896.0
margin_bottom = 400.0

[node name="CandidateProjectionBarContainer5" parent="ResultsRect/MarginContainer/VBoxContainer/ProjectionsContainer" instance=ExtResource( 5 )]
margin_top = 400.0
margin_right = 896.0
margin_bottom = 500.0

[node name="OverallProjectionsContainer" type="VBoxContainer" parent="ResultsRect/MarginContainer/VBoxContainer"]
visible = false
margin_top = 80.0
margin_right = 896.0
margin_bottom = 257.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="PressSpaceToContinueLabel" type="Label" parent="ResultsRect/MarginContainer/VBoxContainer"]
visible = false
margin_top = 177.0
margin_right = 896.0
margin_bottom = 257.0
rect_min_size = Vector2( 0, 80 )
custom_colors/font_color = Color( 1, 0.980392, 0.929412, 1 )
custom_fonts/font = SubResource( 1 )
text = "Press Space to continue"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="ResultsRect/MarginContainer/VBoxContainer/PressSpaceToContinueLabel"]
anims/RESET = SubResource( 2 )
anims/alpha_blend = SubResource( 3 )

[node name="ElectionResultsContainer" type="HBoxContainer" parent="ResultsRect/MarginContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 896.0
margin_bottom = 653.0
size_flags_vertical = 3
custom_constants/separation = 40

[node name="HorizontallyExpandingControl1" type="Control" parent="ResultsRect/MarginContainer/VBoxContainer/ElectionResultsContainer"]
margin_right = 31.0
margin_bottom = 573.0
size_flags_horizontal = 3

[node name="WinnersContainer" type="VBoxContainer" parent="ResultsRect/MarginContainer/VBoxContainer/ElectionResultsContainer"]
margin_left = 71.0
margin_right = 531.0
margin_bottom = 573.0
rect_min_size = Vector2( 460, 0 )
size_flags_horizontal = 3

[node name="VerticallyExpandingControl1" type="Control" parent="ResultsRect/MarginContainer/VBoxContainer/ElectionResultsContainer/WinnersContainer"]
margin_right = 460.0
margin_bottom = 88.0
size_flags_vertical = 3

[node name="WinnersRichTextContainer" type="VBoxContainer" parent="ResultsRect/MarginContainer/VBoxContainer/ElectionResultsContainer/WinnersContainer"]
margin_top = 92.0
margin_right = 460.0
margin_bottom = 188.0
alignment = 1

[node name="WinnersRichTextLabel" type="RichTextLabel" parent="ResultsRect/MarginContainer/VBoxContainer/ElectionResultsContainer/WinnersContainer/WinnersRichTextContainer"]
margin_right = 460.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 96 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]Unfortunately, the top candidates tied and a mayor could not be appointed...[/center]"
text = "Unfortunately, the top candidates tied and a mayor could not be appointed..."

[node name="WinnersTexturesContainer" type="HBoxContainer" parent="ResultsRect/MarginContainer/VBoxContainer/ElectionResultsContainer/WinnersContainer"]
margin_top = 192.0
margin_right = 460.0
margin_bottom = 480.0
rect_min_size = Vector2( 0, 288 )

[node name="CampaignerTextureRect" type="TextureRect" parent="ResultsRect/MarginContainer/VBoxContainer/ElectionResultsContainer/WinnersContainer/WinnersTexturesContainer"]
margin_right = 228.0
margin_bottom = 288.0
size_flags_horizontal = 3
texture = ExtResource( 7 )
stretch_mode = 6

[node name="GathererTextureRect" type="TextureRect" parent="ResultsRect/MarginContainer/VBoxContainer/ElectionResultsContainer/WinnersContainer/WinnersTexturesContainer"]
margin_left = 232.0
margin_right = 460.0
margin_bottom = 288.0
size_flags_horizontal = 3
texture = ExtResource( 6 )
stretch_mode = 6

[node name="VerticallyExpandingControl2" type="Control" parent="ResultsRect/MarginContainer/VBoxContainer/ElectionResultsContainer/WinnersContainer"]
margin_top = 484.0
margin_right = 460.0
margin_bottom = 573.0
size_flags_vertical = 3

[node name="LosersContainer" type="VBoxContainer" parent="ResultsRect/MarginContainer/VBoxContainer/ElectionResultsContainer"]
margin_left = 571.0
margin_right = 825.0
margin_bottom = 573.0
size_flags_horizontal = 3
custom_constants/separation = 20
alignment = 1

[node name="ElectionLoserContainer" parent="ResultsRect/MarginContainer/VBoxContainer/ElectionResultsContainer/LosersContainer" instance=ExtResource( 8 )]
margin_top = 238.0
margin_right = 254.0
margin_bottom = 334.0

[node name="HorizontallyExpandingControl2" type="Control" parent="ResultsRect/MarginContainer/VBoxContainer/ElectionResultsContainer"]
margin_left = 865.0
margin_right = 896.0
margin_bottom = 573.0
size_flags_horizontal = 3

[node name="ReturnToTitleScreenButton" parent="ResultsRect/MarginContainer/VBoxContainer" instance=ExtResource( 9 )]
visible = false
margin_top = 331.0
margin_right = 896.0
margin_bottom = 402.0
size_flags_vertical = 1
text = "Return to Title Screen"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/enlarge = SubResource( 7 )
